# claude-hub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml
backend/src/claude_hub/: auth.py  config.py  main.py  redis_client.py
backend/src/claude_hub/models/: events.py  ticket.py
backend/src/claude_hub/routers/: advisor.py  auth_router.py  github_actions.py  kanban.py  po.py  projects.py  settings_router.py  tickets.py  webhooks.py  ws.py
backend/src/claude_hub/services/: advisor_manager.py  agent_review.py  ci_check.py  clone_manager.py  context_engine.py  cost_tracker.py  github_verify.py  kanban_manager.py  po_agent.py  po_database.py  po_manager.py  session_manager.py  stream_parser.py  ticket_agent.py  ticket_service.py  webhook_registration.py
backend/src/claude_hub/templates/: roles.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/docs/: getting-started.md  index.ts  kanban-board.md  notifications-and-deploy.md  po-agent.md  project-management.md  settings.md  terminal.md  ticket-agent.md  ticket-detail.md
frontend/src/hooks/: useAdaptiveColumns.ts  useContainerWidth.ts  useDeployStatus.ts  useIsMobile.ts  useNotifications.ts  useTheme.ts  useTickets.ts  useVersionPolling.ts  useVisualViewport.ts  useWebSocket.ts
frontend/src/lib/: api.ts  config.ts
frontend/src/theme/: tokens.css
frontend/src/types/: activity.ts  ticket.ts  (+1 more)
(+30 files in other folders)
